syntax = "proto3";

package event.creation;

option go_package = "github.com/Yux77Yux/platform_backend/generated/event/creation;";

enum Exchange {
  EXCHANGE_UPDATE_DB_CREATION = 0;
  EXCHANGE_STORE_CREATION = 1;
  EXCHANGE_UPDATE_CACHE_CREATION = 2;
  EXCHANGE_UPDATE_CREATION_STATUS = 3;
  EXCHANGE_DELETE_CREATION = 4;
  EXCHANGE_UPDATE_CREATION_ACTION_COUNT = 5;
  EXCHANGE_PEND_CREATION = 6;
}

enum Queue {
  QUEUE_UPDATE_DB_CREATION = 0;
  QUEUE_STORE_CREATION = 1;
  QUEUE_UPDATE_CACHE_CREATION = 2;
  QUEUE_UPDATE_CREATION_STATUS = 3;
  QUEUE_DELETE_CREATION = 4;
  QUEUE_UPDATE_CREATION_ACTION_COUNT = 5;
}

enum RoutingKey {
  KEY_UPDATE_DB_CREATION = 0;
  KEY_STORE_CREATION = 1;
  KEY_UPDATE_CACHE_CREATION = 2;
  KEY_UPDATE_CREATION_STATUS = 3;
  KEY_DELETE_CREATION = 4;
  KEY_UPDATE_CREATION_ACTION_COUNT = 5;
  KEY_PEND_CREATION = 6;
  }